--- a/html+css+js/front001.html
+++ b/html+css+js/front001.html
@@ -11,16 +11,29 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-    <div class="container  card">
+    <div class="container  card my-5">
       <h3 class="card-header">001. HTML TAG</h3>
       <!-- Q1. https://validator.w3.org/ 부분을 찾아서 브라우저에서 클릭시 링크넘어가게 만들기   -->
+      <div class="alert  alert-warning my-3">001. a  href="경로"  title="경로설명" </div>
       <ol>
         <li>코드작성</li>
         <li> <a href="https://validator.w3.org/" 
                title="markup validator 검사 바로가기"> https://validator.w3.org/ </a> 마크업검사</li>
       </ol>
       
+      <!-- Q2. 좋아하는 이미지찾아서 p태그안에 이미지태그 넣기  -->
+      <div class="alert  alert-warning my-3">002. img  src="경로"  alt="대체이미지" </div>
+      <p><img  src="ma.jpg"  alt="마동석배우의 파격적인 변신!"/> </p>
+
 
     </div><!-- end container -->     
 </body>
 </html>
+
+
+
+
+
+
+
+
