--- a/html+css+js/front002_ex1_click.html
+++ b/html+css+js/front002_ex1_click.html
@@ -22,7 +22,25 @@
         <button  class="btn btn-danger  my-3"  onclick="alert('one')"  > ONE </button>
         <button  class="btn btn-warning my-3"  onclick="alert('홍길동')"> TWO </button>
         <button  class="btn btn-info    my-3"  onclick="alert(1);  alert(2); alert(3);"> THREE </button>
+     </div> 
+     <!-- BASIC -->
+     <div class="container card my-5">
+        <h3 class="card-header">EX1</h3>
+        <div class="alert alert-danger my-3">
+          two   버튼을 클릭하면 본인이름 알림창 띄우기
+        </div>
+        <button  class="btn btn-warning my-3" onclick="alert('alpha')" > TWO </button> 
+        <button  class="btn btn-warning my-3" onclick="alert('dog'); alert('cat');" > animal1 </button> 
+        <button  class="btn btn-warning my-3" id="a" > animal2 </button> 
+        <script>
+          // !Doctype   document   
+          //                이벤트대상.이벤트  = 이벤트핸들러(처리) 
+          document.getElementById("a").onclick = function(){ 
+                 alert('dog'); alert('cat');
+          };
+        </script>
      </div>
+     <!-- ex -->
 
-</body>
+</body> 
 </html>
